<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_SignPage.user_LogIn"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_marginTop="105dp"
        android:layout_gravity="center"
        android:contentDescription="@string/trim"
        app:srcCompat="@drawable/villive_logo" />

    <EditText
        android:id="@+id/et_login_id"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:autofillHints="@string/id"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="#DFF8E1"
        android:ems="10"
        android:paddingStart="10dp"
        android:gravity="start|center_vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/real_dark_gray"
        android:hint="@string/id"
        android:inputType="text"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_login_pw"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/pw"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="#DFF8E1"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/real_dark_gray"
        tools:ignore="RtlSymmetry" />






    <Button
        android:id="@+id/btn_login"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/rectangle_yellow"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:text="@string/log_in" />

</LinearLayout>