<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurationPage.PasswordChangeActivity"
    android:background="@color/white"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:src="@drawable/villive_logo" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:autofillHints="@string/pw_change1"
        android:textColor="@color/black"
        android:textColorHint="@color/real_dark_gray"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="#DFF8E1"
        android:ems="10"
        android:paddingStart="10dp"
        android:hint="@string/pw_change1"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:autofillHints="@string/pw_change2"
        android:textColor="@color/black"
        android:textColorHint="@color/real_dark_gray"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="#DFF8E1"
        android:ems="10"
        android:paddingStart="10dp"
        android:hint="@string/pw_change2"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/editTextCheckPassword"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:autofillHints="@string/pw_change3"
        android:textColor="@color/black"
        android:textColorHint="@color/real_dark_gray"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="#DFF8E1"
        android:ems="10"
        android:paddingStart="10dp"
        android:hint="@string/pw_change3"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/buttonChange"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_yellow"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/pw_change4" />

</LinearLayout>