<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Community.Community_Complain">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:contentDescription="@string/trim"
            android:src="@drawable/villive_logo_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#454040"
            android:text="@string/community_complain"
            android:id="@+id/complain_posts"
            android:textColor="#FF454040"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ibtn_notice"
            android:layout_width="40dp"
            android:layout_height="38dp"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:contentDescription="@string/notice"
            app:srcCompat="@drawable/exclamation_mark" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_posts_complain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_write_post"
        />

    <Button
        android:id="@+id/btn_write_post"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/st_round_rectangle"
        android:backgroundTint="#FFF099"
        android:text="@string/write_post"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_posts_complain" />

</androidx.constraintlayout.widget.ConstraintLayout>