<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Community.Community_Share"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:contentDescription="@string/trim"
            android:src="@drawable/villive_logo_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#454040"
            android:text="@string/community_group"
            android:textColor="#FF454040"
            android:textSize="25sp"
            android:textStyle="bold" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_posts_group"
        android:layout_width="match_parent"
        android:layout_height="550dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btn_write_post"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/st_round_rectangle"
        android:backgroundTint="#FFF099"
        android:text="@string/write_post"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        />

</LinearLayout>