<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Community_Write.Post_Edit_View"
    android:background="#FFFFFF">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:contentDescription="@string/trim"
            android:src="@drawable/villive_logo_white" />

        <!-- @@게시판 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#454040"
            android:text="@string/edit_post"
            android:textColor="#FF454040"
            android:textSize="25sp"
            android:textStyle="bold" />
    </FrameLayout>

    <EditText
        android:id="@+id/et_edit_title"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/add_post_description_fill_title"
        android:background="@drawable/rectangle"
        android:backgroundTint="#C0DFC3"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:hint="@string/add_post_description_fill_title"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_edit_write"
        android:layout_width="380dp"
        android:layout_height="330dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_little_green"
        android:backgroundTint="#F1F7F4"
        android:ems="10"
        android:textColor="@color/black"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColorHint="@color/dark_gray"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:hint="@string/add_post_description_fill_text"
        android:autofillHints="@string/add_post_description_fill_text"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_edit_save"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="저장"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/rectangle_yellow"
        android:textColor="@color/black"
        android:layout_marginTop="16dp" />
</LinearLayout>