<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_SignPage.user_BuildingAuth"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/trim"
            app:srcCompat="@drawable/villive_logo" />

        <EditText
            android:id="@+id/et_vill_code"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:autofillHints="@string/auth_text4"
            android:background="@drawable/st_round_rectangle"
            android:backgroundTint="#C7E9CA"
            android:ems="10"
            android:hint="   건물 코드를 입력하세요"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="17sp" />

            <Button
                android:id="@+id/btn_to_auth"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/rectangle_yellow"
                android:text="@string/auth"
                android:textColor="@color/black"
                android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>