<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Community.Community_Share"
    android:background="#FFFFFF">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="98dp"
        android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:contentDescription="@string/trim"
            android:src="@drawable/villive_logo_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#454040"
            android:text="@string/community_share"
            android:textColor="#FF454040"
            android:textSize="25sp"
            android:textStyle="bold" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        tools:ignore="MissingConstraints">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_posts"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </androidx.recyclerview.widget.RecyclerView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_write_post"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="#FFF099"
            android:text="@string/write_post"
            android:textColor="@color/black" />

    </FrameLayout>
    </LinearLayout>
</LinearLayout>